tests/regression/errors/basic/type_error_17.csd
// Type error test 17
sus number drip = 17
sus text tea = "string_17"
sus wrong drip = text  // Type mismatch
vibez.spill("Type error 17:", wrong)
